# hum-finder

./: .clang-format  .clangd  .gitignore  ARCHITECTURE_REALTIME.md  CMakeLists.txt  CONTINUATION_GUIDE.md  CRLB_IMPLEMENTATION_SUMMARY.md  DOCS.md  FILE_INPUT_GUIDE.md  FILE_INPUT_IMPLEMENTATION.md  IMPLEMENTATION_REPORT.md  IMPLEMENTATION_SUMMARY.md  MULTI_RECORDING_GUIDE.md  MULTI_RECORDING_SUMMARY.md  Makefile  PRACTICAL_DRONE_FINDING_GUIDE.md  QUICKREF.md  QUICKREF_FILE_INPUT.md  QUICKREF_REALTIME.md  README.md  REALTIME_GUIDE.md  REALTIME_SUMMARY.md  REAL_WORLD_TESTING_PROTOCOL.md  SENSOR_FUSION_INTEGRATION.md  TOOLBOX_STATUS.md
.cache/clangd/index/: estimators.cpp.3809A4428760F6BA.idx  estimators.h.0F68BF7343F8864F.idx  gcc_phat.cpp.C2CC081D4A48EC41.idx  gcc_phat.h.36DBAC357C07B9A7.idx  localizer.cpp.D7ED4FEC7FB82BFA.idx  localizer.h.A8B819E34BD24163.idx  main.cpp.366D66089ED0F011.idx  microphone.cpp.D5DBC5A4C38714B3.idx  microphone.h.7470E9B14BEBB838.idx  sensormod.h.A5CAF02447D330B7.idx  sig.h.FEE5DF9B7C70336C.idx  tdoa_calculator.cpp.658DD83187A7DB95.idx  tdoa_calculator.h.B9188DE9A7F0302A.idx  test_localizer.cpp.89655E666F5B09B8.idx  utils.cpp.7B8C86A5421DE512.idx  utils.h.2FDA0A216B8FE374.idx
cmake/modules/: FindFFTW3.cmake
examples/: streaming_example.cpp
include/: audio_file_loader.h  dft.h  empdist.h  estimators.h  gcc_phat.h  localizer.h  logndist.h  microphone.h  ndist.h  ndist.h.backup  nl.h  pdfclass.h  sensormod.h  sig.h  tdoa_calculator.h  utils.h  utils_sigsys.h
matlab_resources/: Contents.m  initSigSys.m  verSigSys.m
matlab_resources/classes/: betadist.m  bldist.m  cauchydist.m  chi2dist.m  covfun.m  empdist.m  expdist.m  ft.m  gammadist.m  gmdist.m  jlss.m  logdist.m  lss.m  ltf.m  ltimod.m  ncchi2dist.m  ndist.m  nl.m  nl2.m  pdfclass.m  sensormod.m  sig.m  sigmod.m  spec.m  tfd.m  udist.m
matlab_resources/data/: airbag.m  airticket.m  ais2.m  altdata.m  ash.m  auv.m  bach.m  carpath.m  current.m  defibrator.m  eeg_human.m  eeg_rat.m  ekg.m  equake.m  ess.m  fricest.m  fuel.m  gaze.m  genera.m  highway.m  icecore.m  iceg.m  imugps.m  nmt.m  nose.m  odometry.m  pcg.m  photons.m  planepath.m  reaction.m  robot.m  rocket.m  salesment.m  sheep.m  sniper.m  speech.m  struct2sig.m  tracks.m  wheelspeed.m  wimax.m
matlab_resources/mfiles/: abc2thnn.m  auction.m  ball.m  condition.m  confband.m  confband2.m  confellipse.m  confellipse2.m  contour2.m  dbsignal.m  exlinmod.m  exlti.m  exltimod.m  exltv.m  exmotion.m  exnl.m  exrarx.m  exsensor.m  filtfilt.m  getfilter.m  getsignal.m  getwindow.m  hermite.m  histeq.m  imukin3d.m  imukin3dbias.m  inherit.m  inline2mat.m  interp.m  iscov.m  isnumericscalar.m  locmax.m  mat2strformat.m  mchar.m  ncfilter.m  nipfr.m  nls.m  numgrad.m  numhess.m  optset.m  (+8 more)
sensor-fusion/: CMakeLists.txt  README.md
sensor-fusion/cmake/: SensorFusionConfig.cmake.in
sensor-fusion/examples/: CMakeLists.txt  example_ekf.cpp  example_ml_estimation.cpp  example_sensor_model.cpp
sensor-fusion/include/sensor_fusion/: betadist.h  chi2dist.h  estimators.h  expdist.h  gammadist.h  gmdist.h  ncchi2dist.h  nl.h  sensor_fusion.h  sig.h  tdist.h  udist.h  utils_sigsys.h
sensor-fusion/src/: estimators.cpp  nl.cpp  utils.cpp
src/: audio_file_loader.cpp  dft.cpp  estimators.cpp  gcc_phat.cpp  localize_from_files.cpp  localize_multi_recording.cpp  localize_realtime.cpp  localizer.cpp  main.cpp  microphone.cpp  nl.cpp  realtime_localizer.cpp  tdoa_calculator.cpp  utils.cpp
test_3mic/: rec1_mic1.csv  rec1_mic2.csv  rec1_mic3.csv  rec2_mic1.csv  rec2_mic2.csv  rec2_mic3.csv
tests/: README_ALL_ESTIMATORS_TEST.md  test_TDOA_and_ML.cpp  test_all_estimators.cpp  test_broadband_drone.cpp  test_dft.cpp  test_localizer.cpp  test_nl.cpp  test_real_world_drone.cpp  test_sig.cpp  test_toolbox.cpp
tools/: generate_3mic_test_data.py  generate_sample_data.py  generate_sample_data_3d.py  generate_test_audio.py  generate_test_wav.py  plot_estimates.py  setup_venv.sh
